Refactor authentication handling and update HTML structure

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <title>linkhub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 </head>
 
-<body style="overflow: hidden">
+<body>
     <div id="root"></div>
     <script src="/js/main.js"></script>
 </body>
