--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>linkpage.app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
 </head>
 
 <body>
