--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>linkpage.app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
+    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
 </head>
 
 <body>
