--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,30 @@
     <meta charset="utf-8" />
     <title>linkpage.app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
     <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div id="logo">🍿</div>
+        <style>
+            #logo {
+                position: fixed;
+                transform: translate(-50%, -50%);
+                top: 50%;
+                left: 50%;
+                font-size: 68px;
+            }
+        </style>
+    </div>
     <script src="/js/main.js"></script>
 </body>
 
