Add toast animation effects and runtime sleep functionality, update index.html and frontend structure

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
     <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
+    <link rel="stylesheet" href="/index.css">
+
     <style>
         body {
             background-color: black;
