--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
     <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
+
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36'><text y='32' font-size='32'>🍿</text></svg>">
     <link rel="stylesheet" href="/index.css">
 
     <style>
