Implement Swiper carousel for popular media display on home screen

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>moviefinder.app</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
 
     <link rel="icon"
