Refactor navigation and screen handling to replace home screen with feed screen
- Updated references from `:screen/home` to `:screen/feed` across multiple components including `frontend.cljs`, `top_level_bottom_buttons.cljs`, and `media/details/frontend.cljs`.
- Removed the `home` module and adjusted related logic to streamline navigation and improve user experience.
- Enhanced styling in `index.html` to standardize border colors for better UI consistency.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,18 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
-
+    <style type="text/tailwindcss">
+        @layer base {
+            *,
+            ::after,
+            ::before,
+            ::backdrop,
+            ::file-selector-button {
+                border-color: var(--color-neutral-800, currentColor);
+            }
+        }
+        
+      </style>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36'><text y='32' font-size='32'>🍿</text></svg>">
     <link rel="stylesheet" href="/index.css">
